statum-macros/tests/ui/invalid_machine_not_struct.rs
#![allow(unused_imports)]
extern crate self as statum;
pub use statum_core::{CanTransitionMap, CanTransitionTo, CanTransitionWith, DataState, Error, StateMarker, UnitState};
// Legacy compatibility import removed.
use statum_macros::machine;
// Builder methods are inherent.

#[machine]
enum NotAStruct {
    Variant,
}
